fixing font problem on mobile safari

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,12 @@
 
 @import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic);
 
+h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */
+
+font-weight: normal;
+
+}
+
 /* ----------- iPhone 5 and 5S ----------- */
 
 /* Portrait and Landscape */
